отправка письма с помощью Resend

--- a/next-pizza/.env
+++ b/next-pizza/.env
@@ -2,3 +2,5 @@ POSTGRES_URL="postgres://default:dkegUaV9E6Ol@ep-yellow-hill-a20ngyxj-pooler.eu-
 POSTGRES_URL_NON_POOLING="postgres://default:dkegUaV9E6Ol@ep-yellow-hill-a20ngyxj.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require"
 
 NEXT_PUBLIC_API_URL=/api
+
+RESEND_API_KEY=re_HzeBCeqq_GdLL7dhikJ3ok9W8y9BiN29e
