--- a/next-pizza/.env
+++ b/next-pizza/.env
@@ -4,3 +4,7 @@ POSTGRES_URL_NON_POOLING="postgres://default:dkegUaV9E6Ol@ep-yellow-hill-a20ngyx
 NEXT_PUBLIC_API_URL=/api
 
 RESEND_API_KEY=re_HzeBCeqq_GdLL7dhikJ3ok9W8y9BiN29e
+
+YOOMONEY_API_KEY=test_L98FpLnAd2zsVxd0tY_LRbn0gVIjJub4paxj4ZIL7Uw
+
+YOOKASSA_CALLBACK_URL=http://localhost:3000/?paid
