--- a/next-pizza/package.json
+++ b/next-pizza/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.437.0",
     "next": "^14.2.13",
+    "next-auth": "^4.24.11",
     "qs": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
