--- a/next-pizza/.env
+++ b/next-pizza/.env
@@ -8,3 +8,6 @@ RESEND_API_KEY=re_HzeBCeqq_GdLL7dhikJ3ok9W8y9BiN29e
 YOOKASSA_STORE_ID=391809
 YOOKASSA_API_KEY=test_L98FpLnAd2zsVxd0tY_LRbn0gVIjJub4paxj4ZIL7Uw
 YOOKASSA_CALLBACK_URL=http://localhost:3000/?paid
+
+GITHUB_ID=Ov23liNTtZAE2LIXcQcb
+GITHUB_SECRET=14a0c6caf8eea8b5ea1e3a216a2551fe1ee445b9
