--- a/next-pizza/package.json
+++ b/next-pizza/package.json
@@ -32,6 +32,7 @@
     "lucide-react": "^0.437.0",
     "next": "^14.2.13",
     "next-auth": "^4.24.11",
+    "nextjs-toploader": "^3.7.15",
     "qs": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
