авторизация через гугл

--- a/next-pizza/.env
+++ b/next-pizza/.env
@@ -12,3 +12,6 @@ YOOKASSA_CALLBACK_URL=http://localhost:3000/?paid
 
 GITHUB_ID=Ov23liNTtZAE2LIXcQcb
 GITHUB_SECRET=14a0c6caf8eea8b5ea1e3a216a2551fe1ee445b9
+
+GOOGLE_CLIENT_ID="42421874887-u1iv9m9c2glamjaemtg75gqfuv8944gs.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
